Final changes before merge - Session: dd249e16-8fe9-4a31-b250-73b1e3efe99a

--- a/apps/invoicing/src/i18n/locales/en.json
+++ b/apps/invoicing/src/i18n/locales/en.json
@@ -2,6 +2,11 @@
   "invoicing": {
     "title": "Invoices",
     "createInvoice": "Create New Invoice",
-    "description": "Manage your invoices here."
+    "description": "Manage your invoices here.",
+    "uploadInvoice": "Upload Invoice",
+    "dragDropOrClick": "Drag and drop file here, or click to select",
+    "supportedFormats": "PDF, JPG, JPEG or PNG",
+    "cancel": "Cancel",
+    "upload": "Upload"
   }
 }
